# protolang0

./: .gitmodules  .travis.yml  CMakeLists.txt  MIT_LICENSE.txt  README.txt
ide-support/geany/: filetypes.Protolang.conf  readme.txt
p0/: CMakeLists.txt  main.cpp
p0c/: CMakeLists.txt  compiler.cpp  compiler.hpp  compiler_error.cpp  expression_tree.cpp  local_frame.cpp  lvalue_generator.cpp  lvalue_generator.hpp  main.cpp  parser.cpp  reference.cpp  rvalue_generator.cpp  scanner.cpp  scanner.hpp  source_range.hpp  statement_code_generator.cpp  statement_tree.cpp  statement_tree.hpp  temporary.hpp  token.cpp  token.hpp
p0common/: final.hpp  integer_cast.hpp  noexcept.hpp  not_implemented.hpp  throw.hpp  types.hpp  unique_value.hpp  version.hpp
p0compile/: CMakeLists.txt  code_generator.cpp  code_generator.hpp  compile_unit.cpp  compile_unit.hpp  compiler.cpp  compiler.hpp  compiler_error.hpp  expression_tree.cpp  expression_tree.hpp  function_generator.cpp  function_generator.hpp  local_frame.cpp  local_frame.hpp  loop.cpp  loop.hpp  lvalue_generator.cpp  lvalue_generator.hpp  parser.cpp  parser.hpp  pretty_print_error.cpp  pretty_print_error.hpp  reference.cpp  reference.hpp  rvalue_generator.cpp  rvalue_generator.hpp  scanner.cpp  scanner.hpp  source_range.hpp  statement_code_generator.cpp  statement_code_generator.hpp  statement_tree.cpp  statement_tree.hpp  temporary.cpp  temporary.hpp  token.cpp  token.hpp  unit_generator.cpp  unit_generator.hpp
p0i/: CMakeLists.txt  emitter.cpp  emitter.hpp  function.cpp  function.hpp  function_ref.cpp  function_ref.hpp  instruction.cpp  instruction.hpp  ptree_load_unit.cpp  ptree_load_unit.hpp  ptree_save_unit.cpp  ptree_save_unit.hpp  save_unit.cpp  save_unit.hpp  unit.cpp  unit.hpp  unit_info.cpp  unit_info.hpp
p0optimize/: CMakeLists.txt  analyzation.cpp  analyzation.hpp  constant_folding.cpp  constant_folding.hpp  fold_constants.cpp  inlining.cpp  inlining.hpp  local_constant_tracker.cpp  local_constant_tracker.hpp  remove_dead_code.cpp  remove_dead_code.hpp  remove_no_ops.cpp  remove_no_ops.hpp  simplify_instructions.cpp  simplify_instructions.hpp  transformation.cpp  transformation.hpp
p0rt/: CMakeLists.txt  expose.cpp  expose.hpp  from_cpp.hpp  insert.cpp  insert.hpp  module_cache.cpp  module_cache.hpp  native_class.hpp  native_function.cpp  native_function.hpp  native_object.cpp  native_object.hpp  net_module.cpp  net_module.hpp  std_module.cpp  std_module.hpp  to_cpp.hpp
p0run/: CMakeLists.txt  construct.hpp  default_garbage_collector.cpp  default_garbage_collector.hpp  function.cpp  function.hpp  garbage_collector.cpp  garbage_collector.hpp  interpreter.cpp  interpreter.hpp  interpreter_listener.cpp  interpreter_listener.hpp  object.cpp  object.hpp  raw_storage.cpp  raw_storage.hpp  runtime_error.cpp  runtime_error.hpp  runtime_error_exception.cpp  runtime_error_exception.hpp  string.cpp  string.hpp  string_literal_cache.cpp  string_literal_cache.hpp  table.cpp  table.hpp  value.cpp  value.hpp
p0tempest/: CMakeLists.txt  tempest_module.cpp  tempest_module.hpp
samples/: dev.p0  dev.p0i  hello_world.p0  list.p0  list.p0i  signal.p0  signal.p0i  test.p0  test.p0i  test.p0i.js  webserver.p0
speed-test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  analyzation.cpp  compile_and_run.cpp  fold_constants.cpp  from_cpp.cpp  garbage_collector.cpp  illformed.cpp  inlining.cpp  interpreter.cpp  lexical_error.cpp  native_object.cpp  optimization.cpp  parser.cpp  remove_dead_code.cpp  remove_no_ops.cpp  runtime_error.cpp  scanner.cpp  semantic_error.cpp  simplify_instructions.cpp  syntax_error.cpp  table.cpp  test.cpp  test_scripts.cpp  to_cpp.cpp  track_instruction.cpp  unique_value.cpp  unit_serialization.cpp  value.cpp
test-scripts/: array.p0  closure.p0  empty.p0  integer.p0  null.p0  std_enumerate.p0  table.p0  tempest.p0
